# Velix

./: .env.example  .gitignore  LICENSE  README.md  corpus_glo_modal.csv  corpus_sec_modal.csv  modal_app.py  pyproject.toml  velix_api_cache.sqlite
kaggle_upload/: dataset-metadata.json
scripts/: rewrite_manifest_for_modal.py  smoketest.py
scripts/corpus/: build_corpus.py  manifest.py
scripts/corpus/fetchers/: base.py  blm_glo.py  sec_edgar.py  tx_glo.py
src/velix/: cli.py  config.py
src/velix/api/: __init__.py  app.py  cache.py  deps.py  document_store.py
src/velix/api/routes/: documents.py  (+3 more)
src/velix/extraction/: __init__.py  extractor.py  schemas.py
src/velix/models/: __init__.py  extraction.py
src/velix/pipeline/: __init__.py  base.py  orchestrator.py  rendering.py  tier0_pdf.py  tier1_paddle.py  tier2_olmocr.py  tier3_claude.py
src/velix/retrieval/: __init__.py  embedder.py  index.py  page_rendering.py  pipeline.py
src/velix/validators/: __init__.py  land_description.py  mineral_fraction.py  party_consistency.py
tests/: test_api.py  test_extraction.py  test_land_description.py  test_mineral_fraction.py  test_party_consistency.py  test_pipeline_orchestrator.py  test_retrieval.py
web/: .gitignore  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/documents/: page.tsx
web/app/search/: page.tsx
web/components/: AmbientBackground.tsx  CTA.tsx  Features.tsx  Footer.tsx  Hero.tsx  InDocSearch.tsx  LiveStatus.tsx  Navbar.tsx  PdfViewer.tsx  Showcase.tsx  Stats.tsx
web/lib/: api.ts  site.ts
(+1 files in other folders)
