[project]
name = "velix"
version = "0.1.0"
description = "Tiered, confidence-gated document extraction with hybrid retrieval for legal and real-asset workflows"
requires-python = ">=3.10"
dependencies = [
    "pymupdf>=1.24.0",
    "pydantic>=2.6.0",
    "pillow>=10.0.0",
    "numpy>=1.26.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
    "rapidfuzz>=3.9.0",
]

[project.optional-dependencies]
paddle = [
    "paddleocr>=2.7.0",
    "paddlepaddle>=2.6.0",
]
olmocr = [
    "torch>=2.2.0",
    "transformers>=4.45.0",
    "accelerate>=0.30.0",
]
claude = [
    "anthropic>=0.40.0",
]
retrieval = [
    "qdrant-client>=1.10.0",
    "colpali-engine>=0.3.0",
    "torch>=2.2.0",
    "transformers>=4.45.0",
]
corpus = [
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "tqdm>=4.66.0",
]
api = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "aiosqlite>=0.20.0",
    "python-multipart>=0.0.12",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
]
all = [
    "velix[paddle,olmocr,claude,search,dev]",
]

[project.scripts]
velix = "velix.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
